--- a/02-basics/src/app/app.component.html
+++ b/02-basics/src/app/app.component.html
@@ -3,8 +3,8 @@
     <div class="col-xs-12">
       <h3>I'm in the AppComponent!</h3>
       <hr>
-      <app-successalert></app-successalert>
-      <app-warningalert></app-warningalert>
+      <app-success-alert></app-success-alert>
+      <app-warning-alert></app-warning-alert>
     </div>
   </div>
 </div>
