--- a/02-basics/src/app/app.component.html
+++ b/02-basics/src/app/app.component.html
@@ -5,6 +5,7 @@
       <hr>
       <app-success-alert></app-success-alert>
       <app-warning-alert></app-warning-alert>
+      <app-servers></app-servers>
     </div>
   </div>
 </div>
