--- a/02-basics/src/app/servers/servers.component.html
+++ b/02-basics/src/app/servers/servers.component.html
@@ -1,2 +1,21 @@
+<label>Server Name</label>
+<!-- <input type="text" class="form-control"
+(input)="onUpdateServerName($event)"> -->
+<input type="text" class="form-control"
+[(ngModel)]="serverName">
+<!-- <p>{{ serverName }}</p> -->
+<button
+  class="btn btn-primary"
+  [disabled]="!allowNewServer"
+  (click)="onCreateServer()">Add Server</button>
+<!-- <p [innerText]="allowNewServer"></p> -->
+<p>{{ serverCreationStatus }}</p>
 <app-server></app-server>
 <app-server></app-server>
+<hr>
+<label>Username</label>
+<input type="text" class="form-control"
+[(ngModel)]="username">
+<p>{{ username }}</p>
+<button class="btn btn-primary" [disabled]="username === ''"
+(click)="username = ''">Reset</button>
