--- a/02-basics/src/app/servers/servers.component.html
+++ b/02-basics/src/app/servers/servers.component.html
@@ -9,9 +9,10 @@
   [disabled]="!allowNewServer"
   (click)="onCreateServer()">Add Server</button>
 <!-- <p [innerText]="allowNewServer"></p> -->
-<p>{{ serverCreationStatus }}</p>
-<app-server></app-server>
-<app-server></app-server>
+<!-- <p>{{ serverCreationStatus }}</p> -->
+<p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
+<app-server *ngFor="let server of servers"></app-server>
+
 <hr>
 <label>Username</label>
 <input type="text" class="form-control"
@@ -19,3 +20,13 @@
 <p>{{ username }}</p>
 <button class="btn btn-primary" [disabled]="username === ''"
 (click)="username = ''">Reset</button>
+
+<hr>
+<button class="btn btn-primary" (click)="secretVisible = !secretVisible" (click)="logClicks()">Display Details</button>
+<p *ngIf="secretVisible">Secret Password = tuna</p>
+<div
+  *ngFor="let click of clicks"
+  [ngStyle]="{backgroundColor: setColor()}"
+  [ngClass]="{fifthClick: clicks.length >= 5}">
+  {{ click }}
+</div>
