--- a/course-project/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/course-project/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,1 +1,19 @@
-<app-recipe-item></app-recipe-item>
+<div class="row">
+  <div class="col-xs-12">
+    <button class="btn btn-success">New Recipe</button>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <a href="#" class="list-group-item clearfix">
+      <div class="pull-left">
+        <h4 class="list-group-item-heading">{{ recipes[0].name }}</h4>
+        <p class="list-group-item-text">{{ recipes[0].description }}</p>
+      </div>
+      <div class="pull-right">
+        <img src="{{ recipes[0].imagePath }}" alt="" class="img-responsive" style="max-height: 50px;">
+      </div>
+    </a>
+    <app-recipe-item></app-recipe-item>
+  </div>
+</div>
