--- a/course-project/src/app/app.component.html
+++ b/course-project/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
+<app-header (sectionSelected)="onNavigate($event)"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+      <app-recipes *ngIf="loadedSection !== 'shopping-list'"></app-recipes>
+      <app-shopping-list *ngIf="loadedSection === 'shopping-list'"></app-shopping-list>
     </div>
   </div>
 </div>
