--- a/course-project/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/course-project/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,5 @@
 <a class="list-group-item clearfix" style="cursor: pointer;"
->
+[routerLink]="[index]">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
     <p class="list-group-item-text">{{ recipe.description }}</p>
