--- a/course-project/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/course-project/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,7 +7,8 @@
 <div class="row">
   <div class="col-xs-12">
     <app-recipe-item
-      *ngFor="let recipeElem of recipes"
-      [recipe]="recipeElem"></app-recipe-item>
+      *ngFor="let recipeElem of recipes; let i = index"
+      [recipe]="recipeElem"
+      [index]="i"></app-recipe-item>
   </div>
 </div>
