--- a/16-assignment-1/src/app/app.component.html
+++ b/16-assignment-1/src/app/app.component.html
@@ -16,25 +16,39 @@
       <form (ngSubmit)="onSubmit()" #f="ngForm">
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="text" id="email" class="form-control"
-            ngModel name="email" required email #email="ngModel">
+          <input class="form-control"
+            type="email"
+            id="email"
+            ngModel
+            name="email"
+            required
+            email
+            #email="ngModel">
           <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid email!</span>
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="text" id="password" class="form-control"
-            ngModel name="password" required password #password="ngModel">
+          <input class="form-control"
+            type="password"
+            id="password"
+            ngModel name="password"
+            required
+            password
+            #password="ngModel">
           <span class="help-block" *ngIf="!password.valid && password.touched">Please enter a valid password!</span>
         </div>
         <div class="form-group">
           <label for="sub">Subscription</label>
-          <select id="sub" class="form-control"
-            [ngModel]="defaultSub" name="sub">
-            <option value="basic">Basic</option>
-            <option value="advanced">Advanced</option>
-            <option value="pro">Pro</option>
+          <select class="form-control"
+            id="sub"
+            [ngModel]="defaultSub"
+            name="sub">
+            <option
+              *ngFor="let subscription of subscriptions"
+              [value]="subscription">{{ subscription }}</option>
           </select>
         </div>
+        <p class="help-block" *ngIf="!f.valid && f.touched">The form is invalid!</p>
         <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Submit</button>
       </form>
     </div>
