--- a/16-handling-forms-in-angular-apps/src/app/app.component.html
+++ b/16-handling-forms-in-angular-apps/src/app/app.component.html
@@ -36,6 +36,14 @@
               [value]="gender">{{ gender }}
           </label>
         </div>
+        <div formArrayName="hobbies">
+          <h4>Your Hobbies</h4>
+          <button class="btn btn-default" type="button" (click)="onAddHobby()">Add Hobby</button>
+          <div class="form-group"
+            *ngFor="let hobbyControl of controls; let i = index">
+            <input class="form-control" type="text" [formControlName]="i">
+          </div>
+        </div>
         <span
               class="help-block"
               *ngIf="!signupForm.valid && signupForm.touched"
