--- a/16-assignments/src/app/app.component.html
+++ b/16-assignments/src/app/app.component.html
@@ -14,6 +14,33 @@
 
           Upon submitting the form, simply print the value to the console
       -->
+      <form [formGroup]="projectForm" (ngSubmit)="onSaveProject()">
+        <div class="form-group">
+          <label for="name">Project Name</label>
+          <input class="form-control"
+            type="text"
+            id="name"
+            formControlName="projectName">
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input class="form-control"
+            type="email"
+            id="name"
+            formControlName="email">
+        </div>
+        <div class="form-group">
+          <label for="status">Project Status</label>
+          <select class="form-control"
+            id="status"
+            formControlName="projectStatus">
+            <option value="stable">Stable</option>
+            <option value="critical">Critical</option>
+            <option value="finished">Finished</option>
+          </select>
+        </div>
+        <button class="btn btn-primary" type="submit">Create Project</button>
+      </form>
     </div>
   </div>
 </div>
