--- a/19-angular-animations/src/app/app.component.html
+++ b/19-angular-animations/src/app/app.component.html
@@ -5,7 +5,7 @@
       <button class="btn btn-primary">Animate!</button>
       <button class="btn btn-primary">Shrink!</button>
       <hr>
-      <div></div>
+      <div [@divState]="state" style="width: 100px; height: 100px;"></div>
     </div>
   </div>
   <hr>
