Finished Video 9 code-along in Angular Animations

--- a/19-angular-animations/src/app/app.component.html
+++ b/19-angular-animations/src/app/app.component.html
@@ -34,6 +34,7 @@
         <li
           class="list-group-item"
           (click)="onDelete(item)"
+          [@listTwo]
           *ngFor="let item of list">
           {{ item }}
         </li>
