Finished Video 11 code-along in Angular Animations

--- a/19-angular-animations/src/app/app.component.html
+++ b/19-angular-animations/src/app/app.component.html
@@ -5,7 +5,11 @@
       <button class="btn btn-primary" (click)="onAnimate()">Animate!</button>
       <button class="btn btn-primary" (click)="onShrink()">Shrink!</button>
       <hr>
-      <div [@divState]="state" style="width: 100px; height: 100px;"></div>
+      <div
+        [@divState]="state"
+        (@divState.start)="animationStarted($event)"
+        (@divState.done)="animationEnded($event)"
+        style="width: 100px; height: 100px;"></div>
       <br>
       <div [@wildState]="wildState" style="width: 100px; height: 100px;"></div>
     </div>
